# kube-ephemeral-per-node-cache-csi

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.claude/: settings.local.json~
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml
charts/node-local-cache/: Chart.yaml  README.md  values.yaml
charts/node-local-cache/templates/: _helpers.tpl  controller.yaml  csidriver.yaml  node.yaml  rbac.yaml  storageclass.yaml
docs/: design.md  implementation-plan.md
hack/: smoke-test-ghcr.sh  smoke-test-kind.sh
src/: cleanup.rs  controller.rs  identity.rs  main.rs  node.rs  volume.rs
testdata/: k3s-mounts.txt
tests/: integration.rs
