[package]
name = "node-local-cache"
version = "0.1.0"
edition = "2021"
description = "CSI driver for node-local ephemeral cache volumes"
license = "Apache-2.0"

[dependencies]
# gRPC + protobuf
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Kubernetes client
kube = { version = "0.98", features = ["runtime", "client", "derive"] }
k8s-openapi = { version = "0.24", features = ["v1_31"] }

# System operations
nix = { version = "0.29", features = ["mount", "fs"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "node-local-cache"
path = "src/main.rs"

[dev-dependencies]
tower = "0.5"
hyper-util = "0.1"
